<resources>
    <string name="app_name">SignUp</string>
    <string name="form">Membership Form</string>
    <string name="club">National College Health Club</string>
    <string name="name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="other">Other</string>
    <string name="cw">Current Weight</string>
    <string name="height">Height</string>
    <string name="gw">Goal Weight</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="checkbox">I have read,understand and accepted membership rules</string>
    <string name="button">SUBMIT</string>
    <string name="q1">Q1- How to pass the data between activities in Android</string>
    <string name="q2">Q2- What is ADB in android?</string>
    <string name="q3">Q3- How to store heavy structured data in android?</string>
    <string name="a1">Ans- Intent</string>
    <string name="a2">Ans- Android Debug Bridge</string>
    <string name="a3">Ans- SQlite database</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>