<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/form"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:layout_marginTop="50dp"
        android:textSize="32sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/club"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="18dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="18dp"
            android:padding="25px"
            android:inputType="textPersonName"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/cw"
                android:textSize="18dp"
                android:inputType="number"/>
            <EditText
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >
            <EditText
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/gw"
                android:textSize="18dp"
                android:inputType="number"/>
            <EditText
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:inputType="number"/>
        </LinearLayout>
        <EditText
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="18dp"
            android:inputType="phone"/>
        <EditText
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="18dp"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:outlineSpotShadowColor="@color/purple"
            android:text="@string/checkbox"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            android:padding="30px"
            android:text="@string/button"/>
    </LinearLayout>
</LinearLayout>