<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="30dp"
    android:paddingLeft="30dp">
    <TextView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/form"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:layout_marginTop="50dp"
        android:textSize="32sp"/>
    <TextView
        android:id="@+id/club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/club"
        android:textStyle="bold"
        android:layout_below="@id/form"
        android:textColor="@color/purple"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/club"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/gender"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/name"
        tools:ignore="RtlSymmetry" />
    <RadioGroup
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/name"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="18sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="18sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="18sp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/cw"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:hint="@string/cw"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/height"
        android:layout_marginTop="30dp"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:textSize="20sp"
        android:padding="12dp"
        android:inputType="number"
        android:importantForAutofill="no"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/gender"/>
    <EditText
        android:id="@+id/gw"
        android:layout_marginTop="10dp"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:hint="@string/gw"
        android:textSize="20sp"
        android:padding="12dp"
        android:inputType="number"
        android:importantForAutofill="no"
        android:layout_alignParentStart="true"
        android:layout_below="@id/cw"/>
    <EditText
        android:id="@+id/age"
        android:layout_marginTop="10dp"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="20sp"
        android:padding="12dp"
        android:inputType="number"
        android:importantForAutofill="no"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/height"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gw"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/address"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp" />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/purple"
        android:text="@string/checkbox"
        android:layout_below="@id/address"/>
    <Button
        android:layout_marginHorizontal="130dp"
        android:id="@+id/button"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/button"
        android:layout_below="@id/checkbox"/>

</RelativeLayout>