<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="0dp"
    android:paddingEnd="00dp">
    <TextView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/form"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:layout_marginTop="50dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/club"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/club"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/club"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/radio"
        app:layout_constraintButtom_toTopOf="@id/cw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />
    <RadioGroup
        android:id="@+id/radio"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/height"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/gender"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="18sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="18sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="18sp"/>
    </RadioGroup>
    <EditText
        android:id="@+id/cw"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="50dp"
        android:hint="@string/cw"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/gw"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/height"/>
    <EditText
        android:id="@+id/height"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/age"
        app:layout_constraintTop_toBottomOf="@id/radio"
        app:layout_constraintLeft_toRightOf="@id/cw"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/gw"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/gw"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/cw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/age"/>
    <EditText
        android:id="@+id/age"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintLeft_toRightOf="@id/gw"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintTop_toBottomOf="@id/gw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/purple"
        android:text="@string/checkbox"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:layout_marginHorizontal="130dp"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>