<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:padding="10dp"
        android:text="@string/q3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_weight="0.1"
        android:text="@string/a3"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/previous2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/previous"/>
    </TableRow>

</TableLayout>